Change war package deploy to server tomcat